[package]
name = "derivefmt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
parser = { git = "https://github.com/rust-lang/rust-analyzer" }
syntax = { git = "https://github.com/rust-lang/rust-analyzer" }
text-edit = { git = "https://github.com/rust-lang/rust-analyzer" }

[dev-dependencies]
insta = "1.28"
textwrap = "0.16"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3