[package]
name = "derivefmt-core"
version = "0.1.0"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core derivefmt functionality"
repository = "https://github.com/dcchut/derivefmt"
readme = "../README.md"

[dependencies]
parser = { git = "https://github.com/rust-lang/rust-analyzer" }
syntax = { git = "https://github.com/rust-lang/rust-analyzer" }
text-edit = { git = "https://github.com/rust-lang/rust-analyzer" }

[dev-dependencies]
insta = "1.28"
textwrap = "0.16"
